--- a/mainapp/app.json
+++ b/mainapp/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
-    "name": "my-app",
+    "name": "CompNation",
     "slug": "my-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icon2.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splash2.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
