--- a/mainapp/.env
+++ b/mainapp/.env
@@ -1,6 +1,6 @@
-REACT_APP_API_KEY='AIzaSyBGaZP5OIO3gaXhuvh3pIH_Fk05UNrNfLM'
-AUTH_DOMAIN='comp-nation.firebaseapp.com'
-PROJECT_ID='comp-nation'
-STORAGE_BUCKET='comp-nation.appspot.com'
-MESSAGING_SENDER_ID='1066293636857'
-APP_ID='1:1066293636857:web:613229028d65c48cb53c28'
+REACT_APP_API_KEY=AIzaSyBGaZP5OIO3gaXhuvh3pIH_Fk05UNrNfLM
+AUTH_DOMAIN=comp-nation.firebaseapp.com
+PROJECT_ID=comp-nation
+STORAGE_BUCKET=comp-nation.appspot.com
+MESSAGING_SENDER_ID=1066293636857
+APP_ID=1:1066293636857:web:613229028d65c48cb53c28
