--- a/mainapp/package.json
+++ b/mainapp/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.12.2",
     "react": "18.2.0",
     "react-native": "^0.74.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1"
